@@ -1,5 +1,8 @@
 include moc.mk
 
+# Make "but option 'subdir-objects' is disabled" go away
+AUTOMAKE_OPTIONS=subdir-objects
+
 AM_CPPFLAGS=-I$(top_builddir) -I$(top_srcdir) -I$(top_srcdir)/src -I$(top_srcdir)/intl
 
 noinst_LIBRARIES=libqt.a
