@@ -12,6 +12,9 @@ UNRELEASED
 
 - Internal changes:
 
+  * Use automake option subdir-objects to be able to use current
+    automake versions.
+
 - Documentation:
 
 - Translation updates:
